<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_caption">add caption…</string>
    <string name="adjustment_presets">adjustment presets</string>
    <string name="all">all</string>
    <string name="already_processing">Still processing. Please wait.</string>
    <string name="aperture_template">f/%1$s</string>
    <string name="app_name">Gallery</string>
    <string name="apply">apply</string>
    <string name="aspect_ratio_16_9">16:9</string>
    <string name="aspect_ratio_1_1">1:1</string>
    <string name="aspect_ratio_1_2">1:2</string>
    <string name="aspect_ratio_2_1">2:1</string>
    <string name="aspect_ratio_2_3">2:3</string>
    <string name="aspect_ratio_3_2">3:2</string>
    <string name="aspect_ratio_3_4">3:4</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="aspect_ratio_9_16">9:16</string>
    <string name="aspect_ratio_free">free</string>
    <string name="aspect_ratio_original">original</string>
    <string name="back">back</string>
    <string name="bokeh_progress_title_single">processing bokeh</string>
    <string name="bt_not_enabled">"Couldn't enable Bluetooth"</string>
    <string name="calculating_depth_map_progress_title">calculating depth info</string>
    <string name="camera_mode_preference_key">light.co.dummycamera.cameramode</string>
    <string name="cancel">cancel</string>
    <string name="cant_create_editor">"Can't edit this image"</string>
    <string name="cant_edit_with_usb">unplug USB to select</string>
    <string name="cant_read_preset">"Can't write the preset %1$s"</string>
    <string name="cant_save_before_depth">reading depth information. please try again shortly.</string>
    <string name="cant_save_image">"Can't save the changes (%d)"</string>
    <string name="cant_write_preset">"Can't write the preset %1$s"</string>
    <string name="choose_a_preset_to_apply">Choose a preset to apply.</string>
    <string name="choose_a_preset_to_overwrite">Choose a preset to overwrite.</string>
    <string name="choose_preset_type">"Select adjustments to save to '%1$s'"</string>
    <string name="collections_menu_avail_memory">%1$s available</string>
    <string name="confirm">confirm</string>
    <string name="crash_log_upload_failed">Crash log uploaded failed. Check you internet connection.</string>
    <string name="crash_log_upload_success">Crash log uploaded successfully</string>
    <string name="date_header_format">EEE | MMM d, yyyy</string>
    <string name="date_header_with_stars">%1$s %2$s</string>
    <string name="default_preset_name">preset %1$d</string>
    <string name="delete_button_tooltip">please disconnect from computer to delete</string>
    <string name="delete_cancelling">cancelling</string>
    <string name="depth">depth</string>
    <string name="depth_imperial_ft_in">%1$d ft %2$d in</string>
    <string name="depth_imperial_in">%1$d in</string>
    <string name="depth_info">depth at (%1$.0f, %2$.0f) is %3$.2fm</string>
    <string name="depth_map">depth map</string>
    <string name="depth_map_depth_not_available">depth info not available</string>
    <string name="depth_map_fail">Unable to extract depth map.</string>
    <string name="depth_map_reading_depth_info">reading depth info</string>
    <string name="depth_map_touch_to_see_depth">touch image to see the depth</string>
    <string name="depth_meters">%1$.2f m</string>
    <string name="discard">discard</string>
    <string name="edit_button_tooltip">please disconnect from computer to edit</string>
    <string name="edit_ftu_edit_sub_text">to adjust</string>
    <string name="edit_ftu_wheel_main_text">press &amp; drag</string>
    <string name="edit_ftu_wheel_skip">skip</string>
    <string name="edit_history_string">%1$s %2$s</string>
    <string name="edit_mode_contrast">contrast</string>
    <string name="edit_mode_crop">crop</string>
    <string name="edit_mode_exposure">exposure</string>
    <string name="edit_mode_flipx">flip X</string>
    <string name="edit_mode_flipy">flip Y</string>
    <string name="edit_mode_highlights">highlights</string>
    <string name="edit_mode_none">none</string>
    <string name="edit_mode_rotate90">rotate 90</string>
    <string name="edit_mode_saturation">saturation</string>
    <string name="edit_mode_shadows">shadows</string>
    <string name="edit_mode_sharpening">sharpening</string>
    <string name="edit_mode_temp">temp</string>
    <string name="edit_mode_tint">tint</string>
    <string name="edit_mode_vibrance">vibrance</string>
    <string name="edit_save_warning">discard your changes?</string>
    <string name="edit_type_color">color</string>
    <string name="edit_type_geom">geometry</string>
    <string name="edit_type_tone">tone</string>
    <string name="edit_type_tone_and_color">tone &amp; color</string>
    <string name="editor_depth_info">"depth at
(%1$.0f, %2$.0f) is
%3$s"</string>
    <string name="editor_depth_info_no_point">"saved depth is
%1s
"</string>
    <string name="effect">effect</string>
    <string name="empty" />
    <string name="enabling_bluetooth">Enabling Bluetooth…</string>
    <string name="exif_date_format">MMM d, yyyy</string>
    <string name="exif_ev_value">EV %s</string>
    <string name="exif_focal_length">%d mm</string>
    <string name="exif_focal_length_unit">mm</string>
    <string name="exif_gps_latitude_n">%1$.0f° %2$.0f′ %3$.2f″ N</string>
    <string name="exif_gps_latitude_s">%1$.0f\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000</string>
    <string name="exif_gps_longitude_e">%1$.0f° %2$.0f′ %3$.2f″ E</string>
    <string name="exif_gps_longitude_w">%1$.0f° %2$.0f′ %3$.2f″ W</string>
    <string name="exif_iso_value">%d</string>
    <string name="exif_metadata_title">exposure info</string>
    <string name="exif_minus_sign">−%.2f</string>
    <string name="exif_minus_sign_int">−%.0f</string>
    <string name="exif_plus_sign">+%.2f</string>
    <string name="exif_plus_sign_int">+%.0f</string>
    <string name="exif_processed_text">processed</string>
    <string name="exif_resolution_template">%1$d x %2$d</string>
    <string name="exif_ss_value">%ss</string>
    <string name="exif_unprocessed_text">unprocessed</string>
    <string name="exif_zero">0</string>
    <string name="exif_zoom_title">focal length</string>
    <string name="f_stop">f-stop</string>
    <string name="f_stop_format">f/#.#</string>
    <string name="five_stars">★★★★★</string>
    <string name="focal_region">focal region</string>
    <string name="focus">focus</string>
    <string name="focus_instructions">"Touch the image to see the depth at that point. 
 
Press and hold to set the focus to that point."</string>
    <string name="focus_progress_title_single">processing focus</string>
    <string name="focus_toast">Tap to choose a focus point in the unshaded area. Shaded regions cannot be adjusted.</string>
    <string name="gallery_empty_text">no items</string>
    <string name="gallery_name">Gallery</string>
    <string name="gallery_path">/DCIM/Camera/</string>
    <string name="gallery_title_collection_1_stars">★</string>
    <string name="gallery_title_collection_2_stars">★★</string>
    <string name="gallery_title_collection_3_stars">★★★</string>
    <string name="gallery_title_collection_4_stars">★★★★</string>
    <string name="gallery_title_collection_5_stars">★★★★★</string>
    <string name="gallery_title_collection_all">all</string>
    <string name="gallery_title_collection_deleted">deleted</string>
    <string name="gallery_title_collection_photo">photo</string>
    <string name="gallery_title_collection_processed">processed</string>
    <string name="gallery_title_collection_rated">rated</string>
    <string name="gallery_title_collection_rated_by_date">rated by date</string>
    <string name="gallery_title_collection_unrated">unrated</string>
    <string name="gallery_title_collection_video">video</string>
    <string name="gallery_tutorial_instruction_content">to get more widgets</string>
    <string name="gallery_tutorial_instruction_header">swipe up or down</string>
    <string name="good_quality">Good Quality</string>
    <string name="gotit">got it</string>
    <string name="message_filter">Message:</string>
    <string name="message_filter_hint">Regex for Message</string>
    <string name="no_log_entries">No log entries yet</string>
    <string name="remove">remove</string>
    <string name="remove_preset_q">"Remove preset '%1$s'?"</string>
    <string name="save_color_adjustments">Color</string>
    <string name="save_geometry_adjustments">Geometry</string>
    <string name="save_tone_adjustments">Tone</string>
    <string name="share_result_success_text">✓</string>
    <string name="share_to_usb_create_folders">create subfolders by date</string>
    <string name="share_to_usb_eject">safely eject storage</string>
    <string name="share_to_usb_remove_after_transfer">remove transferred files from camera</string>
    <string name="share_to_usb_result_success">transfer complete</string>
    <string name="share_to_usb_skip_existing">skip existing files (otherwise keep both)</string>
    <string name="share_to_usb_space_available">space available on drive</string>
    <string name="share_to_usb_space_required">space required</string>
    <string name="share_to_usb_title_transferring">transferring to USB drive</string>
    <string name="share_to_usb_transfer">transfer</string>
    <string name="tag_filter">Tag:</string>
    <string name="tag_filter_hint">Regex for Tag</string>
    <string name="video_btn_done_text">done</string>
    <string name="video_text_current_time">12:70 | 20:00</string>
</resources>