<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/preset_dialog_header" />
    <Switch android:textSize="@dimen/editor_preset_label_text" android:textColor="@color/default_text" android:id="@id/tone_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:thumb="@drawable/setting_switch_button_thumb" android:text="@string/save_tone_adjustments" android:track="@drawable/setting_switch_button_bg" android:layout_marginStart="@dimen/preset_dialog_title_margin_start" android:layout_marginEnd="@dimen/preset_dialog_title_margin_start" />
    <Switch android:textSize="@dimen/editor_preset_label_text" android:textColor="@color/default_text" android:id="@id/color_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:thumb="@drawable/setting_switch_button_thumb" android:text="@string/save_color_adjustments" android:track="@drawable/setting_switch_button_bg" android:layout_marginStart="@dimen/preset_dialog_title_margin_start" android:layout_marginEnd="@dimen/preset_dialog_title_margin_start" />
    <Switch android:textSize="@dimen/editor_preset_label_text" android:textColor="@color/default_text" android:id="@id/geometry_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:thumb="@drawable/setting_switch_button_thumb" android:text="@string/save_geometry_adjustments" android:track="@drawable/setting_switch_button_bg" android:layout_marginStart="@dimen/preset_dialog_title_margin_start" android:layout_marginEnd="@dimen/preset_dialog_title_margin_start" />
</LinearLayout>