<?xml version="1.0" encoding="utf-8"?>
<light.co.gallery.view.sharing.ShareToUsbResultView android:orientation="vertical" android:id="@id/share_to_usb_status_result" android:background="@color/dialog_bg" android:padding="@dimen/dialog_padding" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/share_to_usb_result_icon_text_size" android:textColor="@color/default_text" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/result_icon" android:background="@drawable/circle_background_success" android:layout_width="@dimen/share_to_usb_result_icon_size" android:layout_height="@dimen/share_to_usb_result_icon_size" android:layout_margin="@dimen/share_to_usb_result_icon_margin" android:text="@string/share_result_success_text" />
    <light.co.lib.widget.TextViewSemiBold android:textSize="@dimen/button_text" android:textColor="@color/default_text" android:layout_gravity="center_horizontal" android:id="@id/result_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/share_to_usb_result_status_margin_top" android:layout_marginBottom="@dimen/share_to_usb_result_status_margin_bottom" android:text="@string/share_to_usb_result_success" />
    <light.co.lib.widget.TextViewRegular android:textSize="@dimen/default_text" android:textColor="#ffbfbfbf" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/result_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@plurals/share_to_usb_result_count" />
    <light.co.lib.widget.TextViewSemiBold android:layout_gravity="center_horizontal" android:id="@id/eject" android:layout_marginTop="@dimen/button_height" android:text="@string/share_to_usb_eject" style="@style/ButtonStyle.Large.Positive"
      xmlns:android="http://schemas.android.com/apk/res/android" />
</light.co.gallery.view.sharing.ShareToUsbResultView>