<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/media_controller_btn_play" android:padding="@dimen/video_controller_size_20px" android:visibility="gone" android:layout_width="@dimen/video_controller_button_play_size" android:layout_height="@dimen/video_controller_button_play_size" android:scaleType="fitXY" android:adjustViewBounds="true" />
        <light.co.lib.widget.TextViewRegular android:textSize="@dimen/video_controller_current_time_text_size" android:textColor="@android:color/white" android:id="@id/media_controller_time_current" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_text_current_time" />
    </RelativeLayout>
    <SeekBar android:id="@id/video_controller_progress" android:padding="0.0px" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/video_controller_size_20px" android:indeterminate="false" android:progressDrawable="@drawable/gallery_video_custom_progress_bar" android:thumb="@color/primaryMarkColorDark" android:layout_alignParentBottom="true" />
    <light.co.lib.widget.TextViewSemiBold android:textSize="@dimen/video_controller_time_size" android:textColor="@color/default_text" android:id="@id/progress_elapsed" android:background="#88000000" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_above="@id/video_controller_progress" android:layout_alignWithParentIfMissing="true" android:layout_marginStart="5.0dip" />
    <light.co.lib.widget.TextViewSemiBold android:textSize="@dimen/video_controller_time_size" android:textColor="@color/default_text" android:id="@id/progress_total" android:background="#88000000" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_above="@id/video_controller_progress" android:layout_alignWithParentIfMissing="true" android:layout_marginEnd="5.0dip" android:layout_alignParentEnd="true" />
    <ProgressBar android:id="@id/volume_bar" android:visibility="gone" android:layout_width="@dimen/video_controller_size_20px" android:layout_height="fill_parent" android:progress="50" android:progressDrawable="@drawable/gallery_video_vertical_volume_bar" android:thumb="@color/primaryMarkColorDark" style="@android:style/Widget.ProgressBar.Horizontal" />
    <ImageView android:id="@id/ic_video_volume" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gallery_video_playback_volume" android:layout_centerVertical="true" android:contentDescription="@string/empty" android:layout_marginStart="@dimen/video_controller_size_30px" android:layout_toEndOf="@id/volume_bar" />
    <light.co.lib.widget.TextViewSemiBold android:textSize="@dimen/video_controller_done_button_text_size" android:textColor="@color/video_bg_progress_process" android:id="@id/done" android:padding="@dimen/video_controller_size_20px" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_btn_done_text" android:layout_alignParentEnd="true" />
</RelativeLayout>